opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mnet"
dev-repo: "git+https://github.com/robur-coop/mnet.git"
bug-reports: "https://github.com/robur-coop/mnet/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.0.0"}
  "utcp"
  "dune" {>= "2.7.0"}
  "mnet" {= version}
  "dns"
  "tls"
  "cmdliner"
  "ca-certs-nss"
  "mirage-ptime"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "A library for defining the options required by a unikernel to configure its TCP/IP stack"
