opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mnet"
dev-repo: "git+https://github.com/robur-coop/mnet.git"
bug-reports: "https://github.com/robur-coop/mnet/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.7.0"}
  "mnet" {= version}
  "mkernel"
  "miou"
  "utcp"
  "charrua" {>= "3.2.0"}
  "charrua-client" {>= "3.2.0"}
  "cstruct" {>= "6.0.0"}
  "mirage-crypto-rng"
  "slice"
  "bstr" {>= "0.0.4"}
  "ipaddr"
  "macaddr"
  "fmt"
  "logs"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "A DHCP client integration for the mnet TCP/IP stack"
description: """
mnet-dhcp provides a DHCP-enabled TCP/IP stack on top of mnet, using the charrua
DHCP implementation. The core mnet library stays free of any DHCP dependency:
the stack can be configured (and reconfigured) at runtime from DHCP leases, and
the user is notified of and may confirm or reject configuration changes.
"""
