opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mnet"
dev-repo: "git+https://github.com/robur-coop/mnet.git"
bug-reports: "https://github.com/robur-coop/mnet/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.0.0"}
  "utcp"
  "dune" {>= "2.7.0"}
  "mnet" {= version}
  "happy-eyeballs"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "Connecting to a remote host via IP version 4 or 6 using mnet"
