opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mnet"
dev-repo: "git+https://github.com/robur-coop/mnet.git"
bug-reports: "https://github.com/robur-coop/mnet/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.0.0"}
  "utcp"
  "dune" {>= "2.7.0"}
  "mnet" {= version}
  "awa"
  "flux"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "An implementation of SSH in OCaml for Miou & Solo5"

pin-depends: [
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#749518ce43476d010e1b44e01e448417e80f91b0" ]
]
