opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/utcp"
dev-repo: "git+https://github.com/robur-coop/utcp.git"
bug-reports: "https://github.com/robur-coop/utcp/issues"
available: [ arch != "arm32" & arch != "x86_32" ] # see #35

depends: [
  "ocaml" {>= "5.0.0"}
  "utcp"
  "dune" {>= "2.7.0"}
  "bstr"
  "bin"
  "slice"
  "mkernel"
  "mirage-crypto-rng"
  "duration"
  "fmt"
  "ipaddr"
  "macaddr"
  "hxd"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "An implementation of TCP (Transmission Control Protocol) in OCaml for Miou & Solo5"
pin-depends: [
  [ "utcp.dev" "git+https://github.com/robur-coop/utcp.git#50d0f3a0b42e8ffd3e4b15131dcf2a61b87ef96b" ]
  [ "mkernel.dev" "git+https://git.robur.coop/robur/mkernel.git#e43e71a74a72b9849d5b01cd249c52e94ea1d57a" ]
]
