opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mnet"
dev-repo: "git+https://github.com/robur-coop/mnet.git"
bug-reports: "https://github.com/robur-coop/mnet/issues"

depends: [
  "ocaml" {>= "5.0.0"}
  "utcp"
  "dune" {>= "2.7.0"}
  "bstr"
  "bin"
  "slice"
  "mkernel"
  "mirage-crypto-rng"
  "duration"
  "fmt"
  "ipaddr"
  "macaddr"
  "hxd"
  "tls"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "An implementation of TCP (Transmission Control Protocol) in OCaml for Miou & Solo5"
pin-depends: [
  [ "utcp.dev" "git+https://github.com/dinosaure/utcp.git#854082cf3a45053e0c308faa6dfc84d7735d1ec6" ]
  [ "mkernel.dev" "git+https://git.robur.coop/robur/mkernel.git#e5259f1a98f0afacb5bca646e5fde176f0c8fb26" ]
]
