(library
 (name tags)
 (public_name mnet.tags)
 (modules tags)
 (libraries fmt ipaddr macaddr logs))

(library
 (name ethernet)
 (public_name mnet.ethernet)
 (modules ethernet)
 (libraries
  hxd.core
  hxd.string
  mnet.tags
  fmt
  mkernel
  macaddr
  logs
  slice.bstr))

(library
 (name mnet)
 (modules mnet UDP TCP)
 (public_name mnet)
 (libraries duration mnet.ipv6 mnet.ipv4 mnet.icmpv4 mnet.ethernet))

(library
 (name mnet_tls)
 (modules mnet_tls)
 (public_name mnet.tls)
 (libraries mnet tls))

(library
 (name mnet_happy_eyeballs)
 (modules mnet_happy_eyeballs)
 (public_name mnet.happy_eyeballs)
 (libraries happy-eyeballs mnet))
