(executable
 (name resolver)
 (modules resolver)
 (link_flags :standard -cclib "-z solo5-abi=hvt")
 (libraries
  mkernel
  mnet
  mnet.cli
  mnet-dns
  hxd.core
  hxd.string
  mirage-crypto-rng-mkernel
  digestif
  re
  gmp
  zarith
  cmdliner
  ca-certs-nss
  mirage-ptime.solo5
  logs.fmt
  logs.cli
  fmt.cli)
 (foreign_stubs
  (language c)
  (names manifest)))

(rule
 (targets manifest.c)
 (enabled_if
  (= %{context_name} "default"))
 (action
  (write-file manifest.c "")))

(rule
 (targets manifest.c)
 (deps manifest.json)
 (enabled_if
  (= %{context_name} "solo5"))
 (action
  (run solo5-elftool gen-manifest manifest.json manifest.c)))
